insya allah fix

--- a/bootstrap/css/home.css
+++ b/bootstrap/css/home.css
@@ -66,3 +66,24 @@
     .sidenav {padding-bottom: : 60px;}
     .sidenav a {font-size: 18px;}
 }
+.card-body-icon {
+  position: absolute;
+  z-index: 0;
+  top: -25px;
+  right: -25px;
+  font-size: 5rem;
+  -webkit-transform: rotate(15deg);
+  -ms-transform: rotate(15deg);
+  transform: rotate(15deg); }
+
+@media (min-width: 576px) {
+  .card-columns {
+    column-count: 1; } }
+
+@media (min-width: 768px) {
+  .card-columns {
+    column-count: 2; } }
+
+@media (min-width: 1200px) {
+  .card-columns {
+    column-count: 2; } }
